Changelog for Shake

    Add newResourceIO and move newResource into the Rules monad
    Add shakeStorageLog, to help diagnosing obscure database errors
0.8
    Improve the Oracle documentation
    Allow getDirectoryFiles to operate recursively
0.7
    Change getDirectoryFiles to take a set of file patterns
    Add doesDirectoryExist function
    Add shakeAbbreviations feature
    Add a new Progress module for sensible progress messages
    Spawn shakeProgress on a separate thread, a safer default
    Improve the runtime error messages
    Add a quietly function, to hide traced commands
    Print main status messages when running a traced command
    Display the exit code when a system command fails
    Fix AssumeClean when the result exists but has never been built
    IMPORTANT: Incompatible on disk format change
    Change the storage to not write messages on --silent
    Add Applicative on Rules
    Add Applicative on Action
0.6
    Make addOracle return a result of askOracle
    Export the class bodies from Classes
    Don't export ShakeValue from Classes
0.5
    IMPORTANT: Incompatible on disk format change
    Add the ShakeValue constraint synonym
    Change the Oracle to be strongly typed
    Add a Classes module
0.4
    Add shakeFlush to control how often flush is called
    Fix a serious space leak in the thread pool
    #502, add shakeAssume to assume files are clean/dirty
    Remove validStored, replace with storedValue
    Remove the default validStored class, almost never right
    Remove Eq/Ord from ShakeOptions (now contains a func)
    #501, add statistics gathering functions to help report progress
    Ensure registering witnesses is thread safe
    Ensure GHC does not over-optimise type registration
0.3.10
    Add Paths.hs so you can run the tests from the tarball
0.3.9
    Don't rely on toList returning a consistent order
    Allow hashable-1.2
0.3.8
    Fix up FilePattern so "foo//bar" ?== "foo/bar"
0.3.7
    Update the cabal file
0.3.6