@@ -3,10 +3,14 @@
 module Development.Shake.File(
     need, want,
     defaultRuleFile,
-    (*>), (**>), (?>)
+    (*>), (**>), (?>),
+    newCache, newCacheIO
     ) where
 
+import Control.Exception
+import Control.Monad
 import Control.Monad.IO.Class
+import qualified Data.HashMap.Strict as Map
 import System.Directory
 
 import Development.Shake.Core
@@ -15,6 +19,7 @@ import Development.Shake.Classes
 import Development.Shake.FilePath
 import Development.Shake.FilePattern
 import Development.Shake.FileTime
+import Development.Shake.Locks
 
 infix 1 *>, ?>, **>
 
@@ -159,3 +164,31 @@ root help test act = rule $ \(FileQ x_) -> let x = unpack x_ in
 --   Note that matching is case-sensitive, even on Windows.
 (*>) :: FilePattern -> (FilePath -> Action ()) -> Rules ()
 (*>) test = root (show test) (test ?==)
+
+
+-- | A version of 'newCache' that runs in IO, and can be called before calling 'Development.Shake.shake'.
+--   Most people should use 'newCache' instead.
+newCacheIO :: (FilePath -> IO a) -> IO (FilePath -> Action a)
+newCacheIO act = do
+    var <- newVar Map.empty -- Var (Map FilePath (Barrier (Either SomeException a)))
+    let run = either (\e -> throwIO (e :: SomeException)) return
+    return $ \file -> do
+        need [file]
+        liftIO $ join $ modifyVar var $ \mp -> case Map.lookup file mp of
+            Just v -> return (mp, run =<< waitBarrier v)
+            Nothing -> do
+                v <- newBarrier
+                return $ (,) (Map.insert file v mp) $ do
+                    res <- try $ act file
+                    signalBarrier v res
+                    run res
+
+
+-- | Given a way of loading information from a file, produce a cached version that will load each file at most once.
+--   Using the cached function will still result in a dependency on the original file.
+--   The argument function should not access any files other than the one passed as its argument.
+--
+--   This function is useful when creating files that store intermediate values,
+--   to avoid the overhead of repeatedly reading from disk, particularly if the file requires expensive parsing.
+newCache :: (FilePath -> IO a) -> Rules (FilePath -> Action a)
+newCache = rulesIO . newCacheIO
