@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Add newCache to cache the parsed contents of files
     Add newResourceIO and move newResource into the Rules monad
     Add shakeStorageLog, to help diagnosing obscure database errors
 0.8
